force-app/main/default/objects/Program__c/fields/BHA_Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>BHA_Survey_ID__c</fullName>
    <description>Qualtrics Survey ID of the BHA survey used by this program.</description>
    <label>BHA Survey ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>