force-app/main/default/objects/Program__c/fields/Post_Coaching_Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Post_Coaching_Survey_ID__c</fullName>
    <description>The ID of the post coaching Qualtrics survey used by this program.</description>
    <label>Post-Coaching Survey ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>